Correct overflow in mobile version; Add grab cursor && chenge activeModel for Rotate360

--- a/src/components/views/About/About.module.scss
+++ b/src/components/views/About/About.module.scss
@@ -4,9 +4,6 @@
   display: flex;
   flex-direction: column;
   width: 1140px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding: 0 20px;
   margin: 0 auto;
   text-align: left;
 }
