--- a/src/components/views/Exhibitions/Exhibitions.module.scss
+++ b/src/components/views/Exhibitions/Exhibitions.module.scss
@@ -4,9 +4,6 @@
   display: flex;
   justify-content: space-between;
   width: 1230px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding: 0 20px;
   margin: 0 auto;
   text-align: left;
   font-family: "newsgoth_lt_btlight";
@@ -19,6 +16,7 @@
     width: auto;
     height: 92vh;
     object-fit: contain;
+    // cursor: grab;
   }
 }
 
@@ -107,7 +105,7 @@
 }
 
 .active {
-  border: red 3px solid;
+  border: #161515 4px solid;
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
